# Wheel

./: .gitattributes  Cargo.toml  EXAMPLES.md  IMPLEMENTATION_STATUS.md  INSTALLATION.md  LIBRARIES.md  LIBS_ARCHITECTURE.md  QUICKSTART.md  README.md  ROADMAP.md  a.out  bare_metal_demo  calc  calculator  calculator_demo  cond_false  conditional  const_if_test  debug_if  debug_parser.rs  for_range_demo  gdb_out.txt  guessing_game  hello  hello_asm  hello_fixed  hello_gcc  hello_simple  hello_test  hello_v2  hwio_simple  input_test  itest  libs_demo  loop_while  loop_while.disasm  lovecode  lucky_game  math  math_const  (+36 more)
.cargo/: config.toml
.github/: linguist.yml
examples/: bare_metal_demo.wheel  calculator.wheel  calculator_demo.wheel  codigo.wheel  conditional.wheel  conditional_false.wheel  const_if_test.wheel  constants.wheel  debug_if.wheel  exemplemathdev.wheel  for_range_demo.wheel  forca_random.wheel  full_calculator.wheel  guessing_game.wheel  hello.wheel  hello_bare.wheel  hw_demo.wheel  hw_serial.wheel  hwio_simple.wheel  input_test.wheel  integer_test.wheel  interactive.wheel  libs_demo.wheel  loop_while.wheel  loop_while_simple.wheel  lucky_game.wheel  math_calc.wheel  math_constants.wheel  math_demo.wheel  math_example.wheel  memory_simple.wheel  memory_test.wheel  multi_libs.wheel  os_demo.wheel  os_simple.wheel  os_syscalls.wheel  perguntas.wheel  process_simple.wheel  pyth2.wheel  pythagorean.wheel  (+13 more)
scripts/: build_multi.sh  install.sh  install_wheel.sh  test_example.sh
src/: ast.rs  codegen.rs  elf_writer.rs  imports.rs  lexer.rs  llvm_backend.rs  (+4 more)
(+19 files in other folders)
