[package]
name = "wheelc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
lazy_static = { version = "1.4", optional = true }
dirs = "4.0"

[features]
default = []
llvm = ["inkwell/llvm16-0-no-llvm-linking"]
sdl = ["sdl2", "lazy_static"]
hwio = []
math = []
os = ["libc"]

[dependencies.inkwell]
version = "0.2"
optional = true

[dependencies.sdl2]
version = "0.36"
optional = true

[dependencies.libc]
version = "0.2"
optional = true
